[package]
name = "todo-git"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/UtsavBalar1231/todo-git"
description = "A simple GitHub issues based todo list application written in Rust"

[dependencies.serde_json]
version = "1.0.108"

[dependencies.serde]
version = "1.0.193"
features = ["derive"]

[dependencies.tokio]
version = "1.35.0"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11.23"
features = ["json"]

[dependencies.spinoff]
version = "0.8.0"
